--- a/src/sciterui/sciterui.vcxproj
+++ b/src/sciterui/sciterui.vcxproj
@@ -28,6 +28,8 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="base_element.cpp" />
+    <ClCompile Include="event_handler.cpp" />
     <ClCompile Include="file.cpp" />
     <ClCompile Include="module_disk.cpp" />
     <ClCompile Include="path.cpp" />
@@ -39,11 +41,14 @@
     <ClCompile Include="sciter_value_internal.cpp" />
     <ClCompile Include="sciter_window.cpp" />
     <ClCompile Include="std_string.cpp" />
+    <ClCompile Include="widgets\menubar.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\sciter_element.h" />
     <ClInclude Include="..\..\include\sciter_ui.h" />
     <ClInclude Include="..\..\include\sciter_value.h" />
+    <ClInclude Include="base_element.h" />
+    <ClInclude Include="event_handler.h" />
     <ClInclude Include="file.h" />
     <ClInclude Include="module_disk.h" />
     <ClInclude Include="module_resource.h" />
