--- a/src/sciterui/sciterui.vcxproj
+++ b/src/sciterui/sciterui.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="event_handler.cpp" />
     <ClCompile Include="file.cpp" />
     <ClCompile Include="module_disk.cpp" />
+    <ClCompile Include="module_resource.cpp" />
     <ClCompile Include="path.cpp" />
     <ClCompile Include="resource_manager.cpp" />
     <ClCompile Include="sciter.cpp" />
