--- a/src/sciterui/sciterui.vcxproj.filters
+++ b/src/sciterui/sciterui.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="base_element.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="module_resource.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sciter.h">
