--- a/src/sciterui/sciterui.vcxproj.filters
+++ b/src/sciterui/sciterui.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="module_resource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="widgets\page_nav.cpp">
+      <Filter>Source Files\widgets</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sciter.h">
@@ -117,6 +120,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\widgets\menubar.h">
+      <Filter>include\widgets</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\widgets\page_nav.h">
       <Filter>include\widgets</Filter>
     </ClInclude>
   </ItemGroup>
