--- a/src/sciterui/sciterui.vcxproj.filters
+++ b/src/sciterui/sciterui.vcxproj.filters
@@ -131,5 +131,8 @@
     <ClInclude Include="..\..\include\widgets\combo_box.h">
       <Filter>include\widgets</Filter>
     </ClInclude>
+    <ClInclude Include="sciter_handler_internal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
